Refactor code into modules
I don't really know javascript but this was the best I could do.

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -109,6 +109,11 @@
 
   <!-- define all the html and then define interactivity -->
   <script src="js/underscore-min.js"></script>
+  <!-- order matters: global imported first -->
+  <script src="js/globals.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/ui.js"></script>
+  <script src="js/scores.js"></script>
   <script src="js/commonplay.js"></script>
   <script src="js/main.js"></script>
 
