rename button for clarity

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -59,7 +59,7 @@
           <button id="giver" class="control-button">Giver</button>
           <button id="zoom-in" class="zoom-button">Zoom In</button>
           <button id="zoom-out" class="zoom-button">Zoom Out</button>
-          <button id="reset-button" class="zoom-button">Reset</button>
+          <button id="reset-button" class="zoom-button">Reset Zoom</button>
         </section>
 
 
