--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
+  <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -24,15 +24,7 @@
           <div id="aboutModal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
-            <p>Common is a game for communities</p>
-          </div>
-        </div>
-
-        <button id="joinBtn">Join</button>
-        <div id="joinModal" class="modal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>To join, please click here</p>
+            <p>Common is a game for communities. To join, please click here.</p>
           </div>
         </div>
 
@@ -61,6 +53,8 @@
           <button id="zoom-out" class="zoom-button">Zoom Out</button>
           <button id="reset-button" class="zoom-button">Reset Zoom</button>
         </section>
+
+        <!-- <div id="chart"></div> -->
 
 
         <svg id="d3viz" width="500" height="300">
