--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -6,20 +6,22 @@
   <meta charset="utf-8">
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
   <meta name="description" content="">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
-  <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
+
 <body>
+
   <div class="header-container">
     <header class="wrapper clearfix">
       <h1 class="title">Common</h1>
-      <nav class>
 
+      <nav class>
         <button id="aboutBtn" >About</button>
           <div id="aboutModal" class="modal">
           <div class="modal-content">
@@ -27,7 +29,6 @@
             <p>Common is a game for communities. To join, please click here.</p>
           </div>
         </div>
-
         <button id="settingsBtn">Settings</button>
         <div id="settingsModal" class="modal">
           <div class="modal-content">
@@ -38,6 +39,7 @@
       </nav>
     </header>
   </div>
+
   <div class="main-container">
     <div class="main wrapper clearfix">
         <header>
@@ -56,7 +58,6 @@
 
         <!-- <div id="chart"></div> -->
 
-
         <svg id="d3viz" width="500" height="300">
         </svg>
 
@@ -65,7 +66,6 @@
         <input id="add" type="button" value="add">
         <input id="random" type="button" value="random"><br>
       </section>
-
 
         network score for i: <span id="iscore">0</span><br>
         node score for i: <span id="node-score-me">0</span><br>
@@ -110,7 +110,6 @@
   <script src="js/scores.js"></script>
   <script src="js/commonplay.js"></script>
   <script src="js/main.js"></script>
-
 
 </body>
 </html>
