--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -13,6 +13,7 @@
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="js/vendor/d3-annotations.min.js"></script>
 </head>
 
 <body>
