--- a/public/auth.html
+++ b/public/auth.html
@@ -2,27 +2,25 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sample FirebaseUI App</title>
+    <title>Common Authentication</title>
     <!-- *******************************************************************************************
        * TODO(DEVELOPER): Paste the initialization snippet from:
        * Firebase Console > Overview > Add Firebase to your web app. *
        ***************************************************************************************** -->
-       <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
-       <script>
-// Initialize Firebase
-var config = {
-  apiKey: "AIzaSyAtKnQw8v9xdpSTPBZwFj3CcIjnugqIxUg",
-  authDomain: "common-d2ecf.firebaseapp.com",
-  databaseURL: "https://common-d2ecf.firebaseio.com",
-  projectId: "common-d2ecf",
-  storageBucket: "common-d2ecf.appspot.com",
-  messagingSenderId: "462000767544"
-};
-  firebase.initializeApp(config);
-       </script>
-    <script src="https://cdn.firebase.com/libs/firebaseui/2.7.0/firebaseui.js"></script>
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/4.12.1/firebase-app.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src="/__/firebase/4.12.1/firebase-auth.js"></script>
+    <script defer src="/__/firebase/4.12.1/firebase-database.js"></script>
+    <script defer src="/__/firebase/4.12.1/firebase-messaging.js"></script>
+    <script defer src="/__/firebase/4.12.1/firebase-storage.js"></script>
+    <script defer src="/__/firebase/init.js"></script>
+    <!-- initialize the SDK after all desired features are loaded -->
+    <script src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
+
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.7.0/firebaseui.css" />
-    <script type="text/javascript">
+  <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function() {
       // FirebaseUI config.
       var uiConfig = {
         autoUpgradeAnonymousUsers: true,
@@ -46,6 +44,7 @@ var config = {
       var ui = new firebaseui.auth.AuthUI(firebase.auth());
       // The start method will wait until the DOM is loaded.
       ui.start('#firebaseui-auth-container', uiConfig);
+    });
     </script>
   </head>
   <body>
