Get DB writes/reads working.
This commit gets DB reads/writes working reliably. To do that, I did a number
of things:

    1. Move most local state into a `state` object. This makes it easier to
	   pass state around and modify it safely.

    2. Replace ME with state.selfId -- this fixes some of the existing code
       which was broken.

	3. Add a db module, which connects to Firebase to listen to events (and
	   to send events).

    4. Wire up most of our buttons (add, random) to send Firebase events
       instead of acting locally. The destroyer/giver are not yet updated,
       however.

    5. Only update the graph based on events we receive from Firebase, not
       based on button pushes directly.

    6. Add a reinitialize button to return the DB to a known-good state.

With this change you can edit the graph, reload, and have it still work.

Known issues:

  * Strength/Life is not being tracked correctly in /players/* or /log* yet.
  * Destroyer/giver are probably not totally correct yet.
  * state.selfId is still hardcoded.
  * weakening/strengthening links is not totally supported yet.

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -67,6 +67,7 @@
         # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
         <input id="add" type="button" value="add">
         <input id="random" type="button" value="random"><br>
+        <input id="reinitialize" type="button" value="reinitialize"><br>
       </section>
 
         network score for i: <span id="iscore">0</span><br>
@@ -109,6 +110,8 @@
   <script src="js/globals.js"></script>
   <script src="js/util.js"></script>
   <script src="js/ui.js"></script>
+  <script src="js/db.js"></script>
+  <script src="js/action.js"></script>
   <script src="js/scores.js"></script>
   <script src="js/commonplay.js"></script>
   <script src="js/main.js"></script>
