First button working

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -60,7 +60,7 @@
 
         <div id="chart"></div>
 
-        <button id="button">Launch missile!</button>
+        <button id="button">Test Button!</button>
 
 
 
