--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -50,21 +50,17 @@
         </header>
           <!-- <h2>To play you must find an active player</h2>
           <p>Click <a href="https://twitter.com/hashtag/commonplay?src=hash " target="_blank">here</a> to find an active player</p> -->
-        <section>
-          <button id="destroy" class="control-button">Destroyer</button>
-          <button id="giver" class="control-button">Giver</button>
-          <button id="zoom-in" class="zoom-button">Zoom In</button>
-          <button id="zoom-out" class="zoom-button">Zoom Out</button>
-          <button id="reset-button" class="zoom-button">Reset Zoom</button>
-        </section>
 
         <div id="chart"></div>
 
-        <button id="button">Test Button!</button>
+        <button id="button2">Test Button!</button>
 
-
-
-        <section>
+        <section class="ui">
+        <button id="destroy">Destroyer</button>
+        <button id="giver" class="control-button">Giver</button>
+        <button id="zoom-in">Zoom In</button>
+        <button id="zoom-out">Zoom Out</button>
+        <button id="reset-button">Reset Zoom</button>
         # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
         <input id="add" type="button" value="add">
         <input id="random" type="button" value="random"><br>
