--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -11,10 +11,12 @@
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-  <!-- <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script> -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="js/vendor/d3-annotations.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.0.1/firebase.js"></script>
+  <script defer src="/__/firebase/5.0.1/firebase-app.js"></script>
+  <script defer src="/__/firebase/5.0.1/firebase-auth.js"></script>
+  <script defer src="/__/firebase/5.0.1/firebase-database.js"></script>
+  <script defer src="/__/firebase/init.js"></script>
 </head>
 
 <body>
