--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -25,22 +25,6 @@
     <header class="wrapper clearfix">
       <h1 class="title">Common</h1>
 
-      <nav class>
-        <button id="aboutBtn" >About</button>
-          <div id="aboutModal" class="modal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Common is a game for communities. To join, please click here.</p>
-          </div>
-        </div>
-        <button id="settingsBtn">Settings</button>
-        <div id="settingsModal" class="modal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Change your settings here</p>
-          </div>
-        </div>
-      </nav>
     </header>
   </div>
 
@@ -53,26 +37,51 @@
           <!-- <h2>To play you must find an active player</h2>
           <p>Click <a href="https://twitter.com/hashtag/commonplay?src=hash " target="_blank">here</a> to find an active player</p> -->
 
-        <div id="chart"></div>
+       <div id="chart"></div>
 
-        <button id="button2">Test Button!</button>
+       <div class="ui">
 
-        <section class="ui">
-        <button id="destroy">Destroyer</button>
-        <button id="giver" class="control-button">Giver</button>
-        <button id="zoom-in">Zoom In</button>
-        <button id="zoom-out">Zoom Out</button>
-        <button id="reset-button">Reset Zoom</button>
-        # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
-        <input id="add" type="button" value="add">
-        <input id="random" type="button" value="random"><br>
-        <input id="reinitialize" type="button" value="reinitialize"><br>
-      </section>
+         <div class "zoomButtons">
+           <button id="zoom-in">Zoom In</button>
+           <button id="zoom-out">Zoom Out</button>
+           <button id="reset-button">Reset Zoom</button>
+         </div>
+         
+         <div class="modalButtons">
+           <button id="aboutBtn" >About</button>
+             <div id="aboutModal" class="modal">
+             <div class="modal-content">
+               <span class="close">&times;</span>
+               <p>Common is a game for communities. To join, please click here.</p>
+             </div>
+           </div>
 
-        network score for i: <span id="iscore">0</span><br>
-        node score for i: <span id="node-score-me">0</span><br>
-        network score: <br>
-        <ul id="network-score"></ul><br>
+
+
+
+           <button id="settingsBtn">Settings</button>
+           <div id="settingsModal" class="modal">
+             <div class="modal-content">
+               <span class="close">&times;</span>
+               <p>Change your settings here</p>
+             </div>
+           </div>
+         </div>
+
+         <div class="adminButtons">
+          <button id="destroy">Destroyer</button>
+          <button id="giver" class="control-button">Giver</button>
+          # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
+          <input id="add" type="button" value="add">
+          <input id="random" type="button" value="random"><br>
+          <input id="reinitialize" type="button" value="reinitialize"><br>
+          network score for i: <span id="iscore">0</span><br>
+          node score for i: <span id="node-score-me">0</span><br>
+          network score: <br>
+          <ul id="network-score"></ul><br>
+        </div>
+
+
 
       <script src="https://d3js.org/d3.v4.min.js"></script>
 
