--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -41,12 +41,12 @@
 
        <div class="ui">
 
-         <div class "zoomButtons">
+         <div class ="zoomButtons">
            <button id="zoom-in">Zoom In</button>
            <button id="zoom-out">Zoom Out</button>
            <button id="reset-button">Reset Zoom</button>
          </div>
-         
+
          <div class="modalButtons">
            <button id="aboutBtn" >About</button>
              <div id="aboutModal" class="modal">
@@ -55,9 +55,6 @@
                <p>Common is a game for communities. To join, please click here.</p>
              </div>
            </div>
-
-
-
 
            <button id="settingsBtn">Settings</button>
            <div id="settingsModal" class="modal">
