--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -39,8 +39,7 @@
          </div>
 
          <div class="modalButtons">
-
-           <button id="aboutBtn" >About</button>
+           <button id="aboutBtn" class="modalButtons">About</button>
            <div id="aboutModal" class="modal">
              <div class="modal-content">
                <span class="close">&times;</span>
