Access the user in commonplay.js

--- a/public/auth.html
+++ b/public/auth.html
@@ -26,7 +26,7 @@
         autoUpgradeAnonymousUsers: true,
 
         //the user has sucessfully signed in so tell them to go to index
-        signInSuccessUrl: 'index.html',
+        signInSuccessUrl: 'commonplay.html',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           //firebase.auth.GoogleAuthProvider.PROVIDER_ID,
