--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -61,7 +61,7 @@
         <div class="adminButtons">
           My Common: <span id="iscore">0</span><br>
           Me: <span id="node-score-me">0</span><br>
-          <button onclick="toggleDebug()">Toggle Debug</button></br></br>
+          <button id="toggleDebugBtn" onclick="toggleDebug()">+</button></br></br>
 
           <div id="toggleDebug">
             <button id="destroy">Destroyer</button>
