add player button

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -55,6 +55,9 @@
              <p>Change your settings here</p>
            </div>
          </div>
+
+         <button id="add-player">Add Player</button>
+
        </div>
 
 
