more add player

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -56,9 +56,11 @@
            </div>
          </div>
 
-         <button id="add-player">Add Player</button>
+         <button id="add-player" type="button" value="add-player" onclick="window.open('http://www.website.com/page')" </button>
 
        </div>
+
+
 
 
         <div class="adminButtons">
