--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -56,7 +56,7 @@
            </div>
          </div>
 
-         <button id="add-player" type="button" value="add-player" onclick="window.open('http://www.website.com/page')" </button>
+         <button id="add-player" type="button" value="add-player" onclick="window.open('minigame.html')"> </button>
 
        </div>
 
@@ -66,7 +66,7 @@
         <div class="adminButtons">
           My Common: <span id="iscore">0</span><br>
           Me: <span id="node-score-me">0</span><br>
-          <button id="toggleDebugBtn" onclick="toggleDebug()">+</button></br></br>
+          <button id="toggleDebugBtn" onclick="toggleDebug()">+</button><br><br>
 
           <div id="toggleDebug">
             <button id="destroy">Destroyer</button>
