--- a/public/auth.html
+++ b/public/auth.html
@@ -16,34 +16,18 @@
     <script defer src="/__/firebase/5.0.1/firebase-storage.js"></script>
     <script defer src="/__/firebase/init.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
-    <script src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.js"></script>
+    <script src="js/auth.js"></script>
 
-    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.7.0/firebaseui.css" />
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.css" />
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function() {
-      // FirebaseUI config.
-      var uiConfig = {
-        autoUpgradeAnonymousUsers: true,
-
-        //the user has sucessfully signed in so tell them to go to index
-        signInSuccessUrl: 'commonplay.html',
-        signInOptions: [
-          // Leave the lines as is for the providers you want to offer your users.
-          //firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-          //firebase.auth.FacebookAuthProvider.PROVIDER_ID,
-          //firebase.auth.TwitterAuthProvider.PROVIDER_ID,
-          //firebase.auth.GithubAuthProvider.PROVIDER_ID,
-          firebase.auth.EmailAuthProvider.PROVIDER_ID,
-          firebase.auth.PhoneAuthProvider.PROVIDER_ID
-        ],
-        // Terms of service url.
-        tosUrl: 'tos.html'
-      };
+      var commonAuth = importAuth(firebase);
 
       // Initialize the FirebaseUI Widget using Firebase.
       var ui = new firebaseui.auth.AuthUI(firebase.auth());
       // The start method will wait until the DOM is loaded.
-      ui.start('#firebaseui-auth-container', uiConfig);
+      ui.start('#firebaseui-auth-container', commonAuth.uiConfig);
     });
     </script>
   </head>
