--- a/public/minigame.html
+++ b/public/minigame.html
@@ -3,7 +3,7 @@
   <head>
     <title>common minigame</title>
     <script src="js/p5.js" type="text/javascript"></script>
-    <!-- <script src="js/p5.play.js" type="text/javascript"></script> -->
+    <script src="js/p5.play.js" type="text/javascript"></script>
     <script src="js/minigame.js" type="text/javascript"></script>
   <body>
   </body>
