--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -60,13 +60,10 @@
 
        </div>
 
-
-
-
         <div class="adminButtons">
           My Common: <span id="iscore">0</span><br>
           Me: <span id="node-score-me">0</span><br>
-          <button id="toggleDebugBtn" onclick="toggleDebug()">+</button><br><br>
+          <button id="toggleDebugBtn">+</button><br><br>
 
           <div id="toggleDebug">
             <button id="destroy">Destroyer</button>
