--- a/public/auth.html
+++ b/public/auth.html
@@ -17,12 +17,21 @@
     <script defer src="/__/firebase/init.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script src="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.js"></script>
+    <script src="js/globals.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/scores.js"></script>
+    <script src="js/db.js"></script>
 
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.0.0/firebaseui.css" />
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function() {
-      var commonAuth = importAuth(firebase);
+      var ui = importUi();
+      var scores = importScores(ui);
+      var util = importUtil(scores, ui);
+      var dbModule = importDb(util, firebase);
+      var commonAuth = importAuth(firebase, dbModule);
 
       // Initialize the FirebaseUI Widget using Firebase.
       var ui = new firebaseui.auth.AuthUI(firebase.auth());
