--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -91,6 +91,7 @@
   <script src="js/db.js"></script>
   <script src="js/action.js"></script>
   <script src="js/scores.js"></script>
+  <script src="js/auth.js"></script>
   <script src="js/commonplay.js"></script>
 
 </body>
