--- a/public/minigame.html
+++ b/public/minigame.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>common minigame</title>
+    <title>common minigame 2</title>
+
     <script src="js/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="js/p5.play.js" type="text/javascript"></script>
     <script src="js/minigame.js" type="text/javascript"></script>
+
   <body>
+    <div id="winBox">
+      username: <input type="text" name="username" /><br>
+      email: <input type="text" name="email" /><br>
+      <input type="button" value="join" id="winBoxButton" /><br>
+    </div>
   </body>
 </html>
+
+<!-- # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text"> -->
