--- a/public/minigame.html
+++ b/public/minigame.html
@@ -7,5 +7,10 @@
     <script src="js/p5.play.js" type="text/javascript"></script>
     <script src="js/minigame.js" type="text/javascript"></script>
   <body>
+    <!-- <div id="winBox">
+      username <input id="username" type="text">
+      email <input id="email" type="text">
+      <input id="join" type="button" value="add">
+    </div> -->
   </body>
 </html>
