--- a/public/minigame.html
+++ b/public/minigame.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>common minigame</title>
     <script src="js/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="js/p5.play.js" type="text/javascript"></script>
     <script src="js/minigame.js" type="text/javascript"></script>
+  </head>
   <body>
-    <!-- <div id="winBox">
-      username <input id="username" type="text">
-      email <input id="email" type="text">
-      <input id="join" type="button" value="add">
-    </div> -->
   </body>
 </html>
