--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -2,14 +2,40 @@
   <html>
     <head>
       <meta charset="utf-8">
-      <title>common minigame</title>
+      <title>common minigame win</title>
+      <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-      <div id="addNewPlayer">
-        username <input id="username" type="text">
-        email <input id="email" type="text">
-        <input id="join" type="button" value="add">
+        <div class="container" id="newPlayerSignup">
+          <h2>Welcome to Common</h2><br>
 
-      </div>
-    </body>
-  </html>
+          <!-- <form action="/commonplay"> -->
+
+            <div class="row">
+              <div class="col-25">
+                <label for="username">username</label>
+              </div>
+
+              <div class="col-75">
+                <input type="text" id="username" name="username" placeholder="new player username here">
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-25">
+                <label for="email">email</label>
+              </div>
+
+              <div class="col-75">
+                <input type="text" id="email" name="email" placeholder="new player email here">
+              </div>
+            </div>
+
+            <br>
+            <div class="row">
+              <input type="submit" value="Submit">
+            </div>
+          <!-- </form> -->
+        </div>
+      </body>
+    </html>
