--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -9,11 +9,12 @@
         <div class="container" id="newPlayerSignup">
           <h2>Welcome to Common</h2><br>
 
-          <!-- <form action="/commonplay"> -->
+          <!-- On submit, send the form-data to X (to process the input): -->
+          <div>
 
             <div class="row">
               <div class="col-25">
-                <label for="username">username</label>
+                <label id="usernameLabel" for="username">username</label>
               </div>
 
               <div class="col-75">
@@ -23,7 +24,7 @@
 
             <div class="row">
               <div class="col-25">
-                <label for="email">email</label>
+                <label id="emailLabel" for="email">email</label>
               </div>
 
               <div class="col-75">
@@ -33,9 +34,15 @@
 
             <br>
             <div class="row">
-              <input type="submit" value="Submit">
+              <input id="join" type="button" value="Submit">
+
+              <!-- <input type="submit" value="Submit" onclick="window.open('commonplay.html')"> -->
             </div>
-          <!-- </form> -->
+          </div>
         </div>
-      </body>
+     <script src="js/minigamewin.js" type="text/javascript"></script>
+
+  </body>
+
+
     </html>
