--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -3,9 +3,17 @@
     <head>
       <meta charset="utf-8">
       <title>common minigame win</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
       <link rel="stylesheet" href="css/main.css">
+      <script defer src="/__/firebase/5.0.1/firebase-app.js"></script>
+      <!-- include only the Firebase features as you need -->
+      <script defer src="/__/firebase/5.0.1/firebase-auth.js"></script>
+      <script defer src="/__/firebase/5.0.1/firebase-functions.js"></script>
+      <script defer src="/__/firebase/init.js"></script>
     </head>
     <body>
+
         <div class="container" id="newPlayerSignup">
           <h2>Welcome to Common</h2><br>
 
