--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -4,8 +4,7 @@
       <meta charset="utf-8">
       <title>common minigame win</title>
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-      <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/minigamewin.css">
       <script defer src="/__/firebase/5.0.1/firebase-app.js"></script>
       <!-- include only the Firebase features as you need -->
       <script defer src="/__/firebase/5.0.1/firebase-auth.js"></script>
