moved minigame line and thickened

--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -41,7 +41,7 @@
 
             <br>
             <div class="row">
-              <input id="join" type="button" value="Submit">
+              <input id="join" type="button" value="submit">
 
               <!-- <input type="submit" value="Submit" onclick="window.open('commonplay.html')"> -->
             </div>
