--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -86,6 +86,7 @@
   <script src="js/underscore-min.js"></script>
   <!-- order matters: global imported first -->
   <script src="js/globals.js"></script>
+  <script src="js/sounds.js"></script>
   <script src="js/util.js"></script>
   <script src="js/ui.js"></script>
   <script src="js/db.js"></script>
