--- a/public/minigame.html
+++ b/public/minigame.html
@@ -5,9 +5,12 @@
     <title>common minigame</title>
     <script src="js/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="libraries/p5.sound.js" type="text/javascript"></script>
+
     <script src="js/p5.play.js" type="text/javascript"></script>
     <script src="js/minigame.js" type="text/javascript"></script>
   </head>
   <body>
+
   </body>
 </html>
