Use cloud functions to reinitialize

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -16,6 +16,7 @@
   <script defer src="/__/firebase/5.0.1/firebase-app.js"></script>
   <script defer src="/__/firebase/5.0.1/firebase-auth.js"></script>
   <script defer src="/__/firebase/5.0.1/firebase-database.js"></script>
+  <script defer src="/__/firebase/5.0.1/firebase-functions.js"></script>
   <script defer src="/__/firebase/init.js"></script>
 </head>
 
