--- a/public/minigame.html
+++ b/public/minigame.html
@@ -5,12 +5,12 @@
     <title>common minigame</title>
     <script src="js/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
-
+    <!-- <script src="libraries/p5.sound.js" type="text/javascript"></script> -->
     <script src="js/p5.play.js" type="text/javascript"></script>
     <script src="js/minigame.js" type="text/javascript"></script>
   </head>
   <body>
-
+    <audio id="player1-sound" src="/sounds/player1-sound.mp3" preload="auto"></audio>
+    <audio id="player2-sound" src="/sounds/player2-sound.mp3" preload="auto"></audio>
   </body>
 </html>
