sound working except on mobile and small bug fixes

--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -45,6 +45,9 @@
 
               <!-- <input type="submit" value="Submit" onclick="window.open('commonplay.html')"> -->
             </div>
+            <div class="row">
+              <p id="status"></p>
+            </div>
           </div>
         </div>
      <script src="js/minigamewin.js" type="text/javascript"></script>
