--- a/public/minigame.html
+++ b/public/minigame.html
@@ -6,11 +6,29 @@
     <script src="js/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <!-- <script src="libraries/p5.sound.js" type="text/javascript"></script> -->
-    <script src="js/p5.play.js" type="text/javascript"></script>
-    <script src="js/minigame.js" type="text/javascript"></script>
+    <!-- <script src="js/p5.play.js" type="text/javascript"></script> -->
+
   </head>
   <body>
+    <audio id="reinforcing-connection-sound" src="/sounds/reinforcing-connection-sound.mp3" preload="auto"></audio>
+    <audio id="connection-forming-sound" src="/sounds/connection-forming-sound.mp3" preload="auto"></audio>
+
+    <audio id="invitation-sound" src="/sounds/invitation-sound.mp3" preload="auto"></audio>
+    <audio id="new-connection-sound" src="/sounds/new-connection-sound.mp3" preload="auto"></audio>
+
     <audio id="player1-sound" src="/sounds/player1-sound.mp3" preload="auto"></audio>
     <audio id="player2-sound" src="/sounds/player2-sound.mp3" preload="auto"></audio>
+
+    <audio id="poor-sound" src="/sounds/poor-sound.mp3" preload="auto"></audio>
+    <audio id="error-sound" src="/sounds/error-sound.mp3" preload="auto"></audio>
+
+    <audio id="destroyer-sound" src="/sounds/destroyer-sound.mp3" preload="auto"></audio>
+    <audio id="giver-sound" src="/sounds/giver-sound.mp3" preload="auto"></audio>
+
+    <audio id="game-music" src="/sounds/game-music.mp3" preload="auto"></audio>
+
+    <script src="js/sounds.js"></script>
+
+    <script src="js/minigame.js" type="text/javascript"></script>
   </body>
 </html>
