Remove network score text

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -62,8 +62,8 @@
        </div>
 
         <div class="adminButtons">
-          My Common: <span id="iscore">0</span><br>
-          Me: <span id="node-score-me">0</span><br>
+          <!-- My Common: <span id="iscore">0</span><br> -->
+          My node score: <span id="node-score-me">0</span><br>
           <button id="toggleDebugBtn">+</button><br><br>
 
           <div id="toggleDebug">
