--- a/public/minigame.html
+++ b/public/minigame.html
@@ -5,7 +5,7 @@
     <title>common minigame</title>
     <script src="js/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <!-- <script src="libraries/p5.sound.js" type="text/javascript"></script> -->
+    <script src="libraries/p5.sound.js" type="text/javascript"></script>
     <!-- <script src="js/p5.play.js" type="text/javascript"></script> -->
 
   </head>
