remove "signup" (users must be invited)

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -67,7 +67,7 @@
             <p id="auth-element"></p>
 
             <div id="login" style="display:none;">
-              <p><a href="auth.html" id="login-anchor">login / signup</a></p>
+              <p><a href="auth.html" id="login-anchor">login</a></p>
             </div>
             <div id="logout" style="display:none;">
               <p><a href="#" id="logout-anchor">logout</a> / <a id="pass-reset" href="#">pass reset</a><span id="reset-sent" style="color:red;"></span></p>
