--- a/public/minigame.html
+++ b/public/minigame.html
@@ -27,7 +27,7 @@
 
     <audio id="game-music" src="/sounds/game-music.mp3" preload="auto"></audio>
 
-    <script src="js/sounds.js"></script>
+    <!-- <script src="js/sounds.js"></script> -->
     <script src="js/minigame.js" type="text/javascript"></script>
   </body>
 </html>
