--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -45,8 +45,20 @@
          <div id="aboutModal" class="modal">
            <div class="modal-content">
              <span class="close">&times;</span>
-             <p>Common is a game for communities. To join, please click here.</p>
-           </div>
+               <p>Welcome to Common. The only way to join is to be invited, in person, by an active player. <p>Here's a <a href="http://commonplay.ca/schedule">schedule</a>. You can also check <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here</a>&nbsp;to see what's happening right now.</p>
+               <p>There are only 3 things you can do here:</p>
+               <ol>
+                 <li>Invite new players</li>
+                 <li>Strengthen your connections</li>
+                 <li>Do nothing and watch your connections dwindle away</li>
+               </ol>
+               <p>Useful things to know:</p>
+               <ul>
+                 <li>You have a limited amount of life-force you can use to invite players or reinforce connections.</li>
+                 <li>Your life-force is replenished daily by the&nbsp;<em>Giver</em>&nbsp;as long as you keep your Common strong.</li>
+                 <li>The&nbsp;<em>Destroyer</em>&nbsp;also visits daily and decays connections and life-force at random.</li>
+               </ul>
+            </div>
          </div>
 
          <button id="settingsBtn">Settings</button>
