--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -45,14 +45,17 @@
          <div id="aboutModal" class="modal">
            <div class="modal-content">
              <span class="close">&times;</span>
-               <p>Welcome to Common. The only way to join is to be invited, in person, by an active player. <p>Here's a <a href="http://commonplay.ca/schedule">schedule</a>. You can also check <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here</a>&nbsp;to see what's happening right now.</p>
-               <p>There are only 3 things you can do here:</p>
+               <h1>Welcome to Common. </h1>
+               <h2>How to Join</h2>
+               <p>The only way to join is to be invited, in person, by an active player. Here's a <a href="http://commonplay.ca/schedule">schedule</a>. You can also check <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here</a>&nbsp;to see what's happening right now.</p>
+               <h2>What to do</h2>
+               <p>If you are an active player, there are 3 things you can do here:</p>
                <ol>
                  <li>Invite new players</li>
                  <li>Strengthen your connections</li>
                  <li>Do nothing and watch your connections dwindle away</li>
                </ol>
-               <p>Useful things to know:</p>
+               <h2>Useful things to know</h2>
                <ul>
                  <li>You have a limited amount of life-force you can use to invite players or reinforce connections.</li>
                  <li>Your life-force is replenished daily by the&nbsp;<em>Giver</em>&nbsp;as long as you keep your Common strong.</li>
