hide nonfunctional password reset button

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -85,12 +85,13 @@
               <p><a href="auth.html" id="login-anchor">login</a></p>
             </div>
             <div id="logout" style="display:none;">
-              <p><a href="#" id="logout-anchor">logout</a> / <a id="pass-reset" href="#">pass reset</a><span id="reset-sent" style="color:red;"></span></p>
+              <p><a href="#" id="logout-anchor">logout</a></p>
+              <!-- <p><a id="pass-reset" href="#">pass reset</a><span id="reset-sent" style="color:red;"></span></p> -->
             </div>
           </div>
 
           <!-- My Common: <span id="iscore">0</span><br> -->
-          My node score: <span id="node-score-me">0</span><br>
+         My life-force: <span id="node-score-me">0</span><br>
           <button id="toggleDebugBtn">+</button><br><br>
 
           <div id="toggleDebug">
