add responsive styling to html pages and add a schedule html

--- a/public/auth.html
+++ b/public/auth.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Common Authentication</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/main.css">
+
     <!-- *******************************************************************************************
        * TODO(DEVELOPER): Paste the initialization snippet from:
        * Firebase Console > Overview > Add Firebase to your web app. *
