--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -47,7 +47,7 @@
              <span class="close">&times;</span>
                <h1>Welcome to Common. </h1>
                <h2>How to Join</h2>
-               <p>The only way to join is to be invited, in person, by an active player. Here's a <a href="http://commonplay.ca/schedule">schedule</a>. You can also check <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here</a>&nbsp;to see what's happening right now.</p>
+               <p>The only way to join is to be invited, in person, by an active player. Here's a <a href="http://commonplay.ca/schedule.html">schedule</a>. You can also check <a href="https://twitter.com/hashtag/commonplay?f=tweets&amp;vertical=default">here</a>&nbsp;to see what's happening right now.</p>
                <h2>What to do</h2>
                <p>If you are an active player, there are 3 things you can do here:</p>
                <ol>
