--- a/public/minigame.html
+++ b/public/minigame.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>common minigame</title>
     <script src="js/p5.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/minigame.css">
+    <meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=1.0, user-scalable=no">
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
     <!-- <script src="js/p5.play.js" type="text/javascript"></script> -->
