--- a/public/schedule.html
+++ b/public/schedule.html
@@ -7,5 +7,6 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div>Schedule!</div>
+    <h1>Schedule!</h1>
+    <div>Events coming soon!</div>
   </body>
