about to break stuff, a commit to fall back on

--- a/public/commonplay.html
+++ b/public/commonplay.html
@@ -8,6 +8,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,900' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -124,6 +125,7 @@
   <script src="js/auth.js"></script>
   <script src="js/login.js"></script>
   <script src="js/commonplay.js"></script>
+
 
   <audio id="reinforcing-connection-sound" src="/sounds/reinforcing-connection-sound.mp3" preload="auto"></audio>
   <audio id="connection-forming-sound" src="/sounds/connection-forming-sound.mp3" preload="auto"></audio>
