--- a/public/auth.html
+++ b/public/auth.html
@@ -46,7 +46,8 @@
   <body>
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
-    <h1>Please log in to Common</h1>
+    <h1>Please sign in to Common</h1>
+    <h2>You were emailed a temporary password when you were invited.<br>Use that email address and password to sign in.</h2>
     <div id="firebaseui-auth-container"></div>
   </body>
 </html>
