First pass at snapshotting utility
This works end-to-end but has some bugs

--- a/public/index.html
+++ b/public/index.html
@@ -95,9 +95,10 @@
          My life-force: <span id="node-score-me">0</span><br>
           <button id="toggleDebugBtn">+</button><br><br>
 
-          <div id="toggleDebug">
+          <div id="toggleDebu">
             <button id="destroy">Destroyer</button>
             <button id="giver" class="control-button">Giver</button>
+            <button id="snapshot" class="control-button">Take Snapshot</button>
             # people: <span id="nodecount">0</span><br> # connections: <span id="edgecount">0</span><br> edge from <input id="from" type="text"> to <input id="to" type="text">
             <input id="add" type="button" value="add">
             <input id="random" type="button" value="random"><br>
