--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
          My life-force: <span id="node-score-me">0</span><br>
           <button id="toggleDebugBtn">+</button><br><br>
 
-          <div id="toggleDebu">
+          <div id="toggleDebug">
             <button id="destroy">Destroyer</button>
             <button id="giver" class="control-button">Giver</button>
             <button id="snapshot" class="control-button">Take Snapshot</button>
