Show the life-force as dash instead of 0 when loading

--- a/public/index.html
+++ b/public/index.html
@@ -91,8 +91,7 @@
             </div>
           </div>
 
-          <!-- My Common: <span id="iscore">0</span><br> -->
-         My life-force: <span id="node-score-me">0</span><br>
+         My life-force: <span id="node-score-me">–</span><br>
           <button id="toggleDebugBtn">+</button><br><br>
 
           <div id="toggleDebug">
