--- a/public/index.html
+++ b/public/index.html
@@ -78,21 +78,21 @@
        </div>
 
         <div class="adminButtons">
-
           <div class="login-elements">
-            <p id="auth-element"></p>
-
             <div id="login" style="display:none;">
               <p><a href="auth.html" id="login-anchor">login</a></p>
             </div>
             <div id="logout" style="display:none;">
               <p><a href="#" id="logout-anchor">logout</a></p>
-              <!-- <p><a id="pass-reset" href="#">pass reset</a><span id="reset-sent" style="color:red;"></span></p> -->
             </div>
           </div>
 
-         My life-force: <span id="node-score-me">–</span><br>
-          <button id="toggleDebugBtn">+</button><br><br>
+          My life-force: <span id="node-score-me">–</span>
+
+          <br>
+          <button id="toggleDebugBtn">+</button>
+
+          <br><br>
 
           <div id="toggleDebug">
             <button id="destroy">Destroyer</button>
