Clean up login/logout markup. Fix height so life-force doesn't jump around

--- a/public/index.html
+++ b/public/index.html
@@ -78,14 +78,10 @@
        </div>
 
         <div class="adminButtons">
-          <div class="login-elements">
-            <div id="login" style="display:none;">
-              <p><a href="auth.html" id="login-anchor">login</a></p>
-            </div>
-            <div id="logout" style="display:none;">
-              <p><a href="#" id="logout-anchor">logout</a></p>
-            </div>
-          </div>
+          <p class="login-elements">
+            <a style="display:none;" href="auth.html" id="login">login</a>
+            <a style="display:none;" href="#" id="logout">logout</a>
+          </p>
 
           My life-force: <span id="node-score-me">–</span>
 
