Nicer styling on login links

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
         <div class="adminButtons">
           <p class="login-elements">
             <a style="display:none;" href="auth.html" id="login">login</a>
-            <a style="display:none;" href="#" id="logout">logout</a>
+            <a style="display:none;" href="/" id="logout">logout</a>
           </p>
 
           My life-force: <span id="node-score-me">–</span>
