--- a/public/index.html
+++ b/public/index.html
@@ -79,8 +79,8 @@
 
         <div class="adminButtons">
           <p class="login-elements">
-            <a style="display:none;" href="auth.html" id="login">login</a>
-            <a style="display:none;" href="/" id="logout">logout</a>
+            <a style="display:none;" href="auth.html" id="login">Sign in</a>
+            <a style="display:none;" href="/" id="logout">Log out</a>
           </p>
 
           My life-force: <span id="node-score-me">–</span>
