Add a “Loading …” note

--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@
 
         <div class="adminButtons">
           <p class="login-elements">
+            <span id="loading-indicator">Loading …</span>
             <a style="display:none;" href="auth.html" id="login">Sign in</a>
             <a style="display:none;" href="/" id="logout">Log out</a>
           </p>
