TASKS vision document with some work.

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,8 @@
             <a style="display:none;" href="/" id="logout">Log out</a>
           </p>
 
-          My life-force: <span id="node-score-me">–</span>
+          My life-force: <span id="node-score-me">–</span><br>
+          My clicks: <span id="player-clicks">–</span>
 
           <br>
           <button id="toggleDebugBtn">+</button>
