Minigamewin's input type should be email for email

--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -36,7 +36,7 @@
               </div>
 
               <div class="col-75">
-                <input type="text" id="email" name="email" placeholder="new player email here">
+                <input type="email" id="email" name="email" placeholder="new player email here">
               </div>
             </div>
 
