rudimentary settings list created

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,15 @@
          <div id="settingsModal" class="modal">
            <div class="modal-content">
              <span class="close">&times;</span>
-             <p>Change your settings here</p>
+             <h1>Change your settings here</h1>
+             <ul>
+               <li>Sound on/off</li>
+               <li>Music on/off</li>
+               <li>Colour Contrast on/off</li>
+               <li>Open Dyslexic on/off</li>
+               <li>Large text on/off</li>
+               <li>Zoom Buttons Hidden on/off</li>
+             </ul>
            </div>
          </div>
 
