--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -9,6 +9,7 @@
       <!-- include only the Firebase features as you need -->
       <script defer src="/__/firebase/5.0.1/firebase-auth.js"></script>
       <script defer src="/__/firebase/5.0.1/firebase-functions.js"></script>
+      <script defer src="/__/firebase/5.0.1/firebase-database.js"></script>
       <script defer src="/__/firebase/init.js"></script>
     </head>
     <body>
@@ -26,7 +27,7 @@
 
               <div class="col-75">
                 <input type="text" id="username" name="username" placeholder="new player username here">
-                <p></p>
+                <p id="username-error-msg" style="color: red;"></p>
               </div>
             </div>
 
@@ -37,6 +38,7 @@
 
               <div class="col-75">
                 <input type="email" id="email" name="email" placeholder="new player email here">
+                <p id="email-error-msg" style="color: red;"></p>
               </div>
             </div>
 
@@ -49,6 +51,7 @@
             </div>
           </div>
         </div>
+     <script src="js/db.js" type="text/javascript"></script>
      <script src="js/minigamewin.js" type="text/javascript"></script>
 
   </body>
