minigamewin: "you are connect with $USERNAME"

--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -15,7 +15,8 @@
     <body>
 
         <div class="container" id="newPlayerSignup">
-          <h2>Welcome to Common</h2><br>
+          <h2>Welcome to Common</h2>
+          <h3 id="common-you-are-connecting"></h3>
 
           <!-- On submit, send the form-data to X (to process the input): -->
           <div>
