Get things mostly working.

--- a/public/index.html
+++ b/public/index.html
@@ -101,9 +101,9 @@
           </p>
 
           My life-force: <span id="node-score-me">–</span><br>
-          My clicks: <span id="player-clicks">–</span>
+          My clicks: <span id="player-clicks">–</span><br>
+          Decay rate: <span id="decay-rate">–</span><br>
 
-          <br>
           <button id="toggleDebugBtn">+</button>
 
           <br><br>
