Revert "Try to add some clarity to the mechanics of Common"

--- a/public/index.html
+++ b/public/index.html
@@ -100,10 +100,9 @@
             <a style="display:none;" href="/" id="logout">Log out</a>
           </p>
 
-          My life-force: <span id="node-score-me">–</span><br>
-          My clicks: <span id="player-clicks">–</span><br>
-          Decay rate: <span id="decay-rate">–</span><br>
+          My life-force: <span id="node-score-me">–</span>
 
+          <br>
           <button id="toggleDebugBtn">+</button>
 
           <br><br>
