--- a/public/index.html
+++ b/public/index.html
@@ -99,10 +99,11 @@
             <a style="display:none;" href="auth.html" id="login">Sign in to play</a>
             <a style="display:none;" href="/" id="logout">Log out</a>
           </p>
-
+          <strong>My clicks</strong>: <span id="player-clicks">–</span><br>
           My life-force: <span id="node-score-me">–</span><br>
-          My clicks: <span id="player-clicks">–</span><br>
-          Decay rate: <span id="decay-rate">–</span><br>
+          Common decay rate: <span id="decay-rate">–</span><br>
+          Common status: <span id="status">–</span><br>
+
 
           <button id="toggleDebugBtn">+</button>
 
