Nicer username / Log out text

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
           <p class="login-elements">
             <span id="loading-indicator">Loading …</span>
             <a style="display:none;" href="auth.html" id="login">Sign in to play</a>
-            <a style="display:none;" href="/" id="logout">Log out</a>
+            <strong id="username"></strong> <a style="display:none;" href="/" id="logout">Log out</a>
           </p>
           <strong>My clicks</strong>: <span id="player-clicks">–</span><br>
           My life-force: <span id="node-score-me">–</span><br>
