--- a/public/index.html
+++ b/public/index.html
@@ -99,11 +99,42 @@
             <a style="display:none;" href="auth.html" id="login">Sign in to play</a>
             <strong id="username"></strong> <a style="display:none;" href="/" id="logout">Log out</a>
           </p>
-          My clicks: <span id="player-clicks">–</span><br>
-          My life-force: <span id="node-score-me">–</span><br>
-          Common decay rate: <span id="decay-rate">–</span><br>
-          Common status: <span id="status">–</span><br>
+          My clicks: <span id="player-clicks">–</span>      <button class="help-button" id="player-clicks-explanation-btn">?</button><br>
+          My life-force: <span id="node-score-me">–</span>  <button class="help-button" id="node-score-me-explanation-btn">?</button><br>
+          Common decay rate: <span id="decay-rate">–</span> <button class="help-button" id="decay-rate-explanation-btn">?</button><br>
+          Common status: <span id="status">–</span>         <button class="help-button" id="status-explanation-btn">?</button><br>
 
+          <div id="player-clicks-explanation" class="modal">
+           <div class="modal-content">
+             <span class="close">&times;</span>
+               <h1>My clicks</h1>
+               <p>Here is an explanation about “My clicks”</p>
+            </div>
+          </div>
+
+          <div id="node-score-me-explanation" class="modal">
+           <div class="modal-content">
+             <span class="close">&times;</span>
+               <h1>My life-force</h1>
+               <p>Here is an explanation about “My life-force”</p>
+            </div>
+          </div>
+
+          <div id="decay-rate-explanation" class="modal">
+           <div class="modal-content">
+             <span class="close">&times;</span>
+               <h1>Common decay rate</h1>
+               <p>Here is an explanation about “Common decay rate”</p>
+            </div>
+          </div>
+
+          <div id="status-explanation" class="modal">
+           <div class="modal-content">
+             <span class="close">&times;</span>
+               <h1>Common status</h1>
+               <p>Here is an explanation about “Common status”</p>
+            </div>
+          </div>
 
           <button id="toggleDebugBtn">+</button>
 
