Show the game status in UI (replays the entire current status on load …)

--- a/public/index.html
+++ b/public/index.html
@@ -136,6 +136,8 @@
             </div>
           </div>
 
+          <p id="game-status"></p>
+
           <button id="toggleDebugBtn">+</button>
 
           <br><br>
