--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
            <div class="modal-content">
              <span class="close">&times;</span>
                <h1>My clicks</h1>
-               <p>Here is an explanation about “My clicks”</p>
+               <p>You have a limited amount of clicks you can use. Use your clicks to give life-force to others, to invite new players to Common, or to make new connections with existing players. Clicks regenerate over time. </p>
             </div>
           </div>
 
@@ -116,7 +116,7 @@
            <div class="modal-content">
              <span class="close">&times;</span>
                <h1>My life-force</h1>
-               <p>Here is an explanation about “My life-force”</p>
+               <p>Through the relentless pressure of time and the natural decay of the universe, you will lose life-force. Want it back? Life force is generated through reinforcing connections, building new connections with existing memebers, and inviting new players to your Common. </p>
             </div>
           </div>
 
@@ -124,7 +124,7 @@
            <div class="modal-content">
              <span class="close">&times;</span>
                <h1>Common decay rate</h1>
-               <p>Here is an explanation about “Common decay rate”</p>
+               <p>The Common decay rate is related to the activity of the members. Forgotten Commons will decay quickly, disintegrating into the nothingness that awaits us all.</p>
             </div>
           </div>
 
@@ -132,7 +132,7 @@
            <div class="modal-content">
              <span class="close">&times;</span>
                <h1>Common status</h1>
-               <p>Here is an explanation about “Common status”</p>
+               <p>Common status is where all things are known to you. Below is a feed of all the events happening over time.</p>
             </div>
           </div>
 
