--- a/public/index.html
+++ b/public/index.html
@@ -56,12 +56,6 @@
                  <li>Strengthen your connections</li>
                  <li>Do nothing and watch your connections dwindle away</li>
                </ol>
-               <h2>Useful things to know</h2>
-               <ul>
-                 <li>You have a limited amount of life-force you can use to invite players or reinforce connections.</li>
-                 <li>Your life-force is replenished daily by the&nbsp;<em>Giver</em>&nbsp;as long as you keep your Common strong.</li>
-                 <li>The&nbsp;<em>Destroyer</em>&nbsp;also visits daily and decays connections and life-force at random.</li>
-               </ul>
             </div>
          </div>
 
@@ -108,7 +102,11 @@
            <div class="modal-content">
              <span class="close">&times;</span>
                <h1>My clicks</h1>
-               <p>You have a limited amount of clicks you can use. Use your clicks to give life-force to others, to invite new players to Common, or to make new connections with existing players. Clicks regenerate over time. </p>
+               <ul>
+                 <li>You have a limited amount of clicks you can use. </li>
+                 <li>Use your clicks to give life-force to others, to invite new players to Common, or to make new connections with existing players. </li>
+                 <li>Clicks regenerate over time. </li>
+               </ul>
             </div>
           </div>
 
