--- a/public/index.html
+++ b/public/index.html
@@ -102,11 +102,7 @@
            <div class="modal-content">
              <span class="close">&times;</span>
                <h1>My clicks</h1>
-               <ul>
-                 <li>You have a limited amount of clicks you can use. </li>
-                 <li>Use your clicks to give life-force to others, to invite new players to Common, or to make new connections with existing players. </li>
-                 <li>Clicks regenerate over time. </li>
-               </ul>
+               <p>You have a limited amount of clicks you can use. Use your clicks to give life-force to others, to invite new players to Common, or to make new connections with existing players. Clicks regenerate over time.</p>
             </div>
           </div>
 
