Disable submit button and show a message when saving connection

--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -46,6 +46,7 @@
             <br>
             <div class="row">
               <input id="join" type="button" value="submit">
+              <p id="submitting-msg" style="color: green;"></p>
             </div>
             <div class="row">
               <p id="status"></p>
