minigame to join ritual

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
            </div>
          </div>
 
-         <button id="add-player" type="button" value="add-player" onclick="window.open('minigame.html')"> </button>
+         <button id="add-player" type="button" value="add-player" onclick="window.open('joinritual.html')"> </button>
          <button id="add-link" type="button" value="add-link" onclick="window.open('addlink.html')"> </button>
 
 
