--- a/public/minigame.html
+++ b/public/minigame.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>common minigame</title>
+    <title>common joinritual</title>
     <script src="js/p5.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="css/minigame.css">
+    <link rel="stylesheet" href="css/joinritual.css">
     <meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=1.0, user-scalable=no">
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
@@ -13,6 +13,6 @@
   </head>
   <body>
     <script src="js/sounds.js"></script>
-    <script src="js/minigame.js" type="text/javascript"></script>
+    <script src="js/joinritual.js" type="text/javascript"></script>
   </body>
 </html>
