--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -2,10 +2,10 @@
   <html>
     <head>
       <meta charset="utf-8">
-      <title>common minigame win</title>
+      <title>common joinritual win</title>
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="stylesheet" href="/css/main.css">
-      <link rel="stylesheet" href="/css/minigamewin.css">
+      <link rel="stylesheet" href="/css/joinritualwin.css">
       <script defer src="/__/firebase/5.0.1/firebase-app.js"></script>
       <!-- include only the Firebase features as you need -->
       <script defer src="/__/firebase/5.0.1/firebase-auth.js"></script>
@@ -59,7 +59,7 @@
         </div>
      <script src="js/globals.js" type="text/javascript"></script>
      <script src="js/db.js" type="text/javascript"></script>
-     <script src="js/minigamewin.js" type="text/javascript"></script>
+     <script src="js/joinritualwin.js" type="text/javascript"></script>
 
   </body>
 
